// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should contain target="_blank" when openNewTab is set true 1`] = `
<scale-link href="http://example.com" open-new-tab="true">
  <mock:shadow-root>
    <style>
      .link {
  cursor: pointer;
  outline: none;
  text-decoration: none;
  font-weight: 500;
  color: #007DB3;
  border-bottom: 1px solid currentColor;
}
.link:hover.link:not(.link--disabled) {
  color: #007DB3;
}
.link:focus:not(.link--disabled) {
  border-bottom: 2px solid currentColor;
}
.link:active.link:not(.link--disabled) {
  color: #0070A0;
}
.link:visited.link:not(.link--disabled) {
  color: #0070A0;
}
.link__wrapper {
  display: inline-flex;
  align-items: center;
}
.link__wrapper > *:not(:first-child) {
  margin-inline-start: 0.25rem;
}
.link--block {
  display: block;
}
.link--disabled {
  cursor: not-allowed;
  color: #7C7C7C;
}
    </style>
    <a class="link" href="http://example.com" target="_self">
      <span class="link__wrapper">
        <slot></slot>
      </span>
    </a>
  </mock:shadow-root>
  Label
</scale-link>
`;

exports[`Link should have link href value when href value is set 1`] = `
<scale-link href="http://example.com">
  <mock:shadow-root>
    <style>
      .link {
  cursor: pointer;
  outline: none;
  text-decoration: none;
  font-weight: 500;
  color: #007DB3;
  border-bottom: 1px solid currentColor;
}
.link:hover.link:not(.link--disabled) {
  color: #007DB3;
}
.link:focus:not(.link--disabled) {
  border-bottom: 2px solid currentColor;
}
.link:active.link:not(.link--disabled) {
  color: #0070A0;
}
.link:visited.link:not(.link--disabled) {
  color: #0070A0;
}
.link__wrapper {
  display: inline-flex;
  align-items: center;
}
.link__wrapper > *:not(:first-child) {
  margin-inline-start: 0.25rem;
}
.link--block {
  display: block;
}
.link--disabled {
  cursor: not-allowed;
  color: #7C7C7C;
}
    </style>
    <a class="link" href="http://example.com" target="_self">
      <span class="link__wrapper">
        <slot></slot>
      </span>
    </a>
  </mock:shadow-root>
  Label
</scale-link>
`;

exports[`Link should match snapshot 1`] = `
<scale-link>
  <mock:shadow-root>
    <style>
      .link {
  cursor: pointer;
  outline: none;
  text-decoration: none;
  font-weight: 500;
  color: #007DB3;
  border-bottom: 1px solid currentColor;
}
.link:hover.link:not(.link--disabled) {
  color: #007DB3;
}
.link:focus:not(.link--disabled) {
  border-bottom: 2px solid currentColor;
}
.link:active.link:not(.link--disabled) {
  color: #0070A0;
}
.link:visited.link:not(.link--disabled) {
  color: #0070A0;
}
.link__wrapper {
  display: inline-flex;
  align-items: center;
}
.link__wrapper > *:not(:first-child) {
  margin-inline-start: 0.25rem;
}
.link--block {
  display: block;
}
.link--disabled {
  cursor: not-allowed;
  color: #7C7C7C;
}
    </style>
    <a class="link" target="_self">
      <span class="link__wrapper">
        <slot></slot>
      </span>
    </a>
  </mock:shadow-root>
  default
</scale-link>
`;
